# AVOCADO

./: CMakeLists.txt  alpha_experiment.py  avocado.cp314-win_amd64.pyd  build_human_trajectory_dataset.py  et --hard HASH  evaluate_dataset_avocado.py  generate_human_paths.py  main_opinion_ttc_avocado_dataset.py  main_ovalVSttc_generate_dataset.py  make_robot_start_goal.py  plot_thor_trajectory_comparison.py  replay_dataset_sample_avocado.py  setup.py  simple_example.py  visualize_human_trajectory_dataset.py
src/: avocado.cpp
